# Advanced-SIP-SWP-Calculator

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sip-swp-calculator-prompt.md  vercel.json
api/: index.py
backend/: calculations.py  main.py  models.py
backend/tests/: test_calculations.py
frontend/: package-lock.json  package.json  server.js
frontend/public/: app.js
public/: index.html  styles.css
