[project]
name = "fastapi-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "pydantic==2.7.4",
]

# Tells Vercel's Python runtime which ASGI app to serve. The whole `backend`
# package is bundled into the function; the static frontend in public/ is served
# separately by Vercel's CDN.
[tool.vercel]
entrypoint = "backend.main:app"
